# fleditor-bpmn

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY.md  bom.json  flowable-moddle.js  flowable-properties-provider.esm.js  flowable-properties-provider.js  index.html  main.js  package-lock.json  package.json  styles.css  styles.css.backup  test-event-editor.html  test-event.event  test-simple.bpmn  tsconfig.json  vite.config.ts
callgraph/: calls.dot  calls.mmd  graph.json  modules.mmd
hosts/angular/: README.md
hosts/browser/: index.html  main.ts
hosts/tauri/: README.md  main.ts
scripts/: third-party-from-pnpm.mjs
src/: bpmn-xml-utils.ts  change-tracker.ts  dmn-support.ts  dmn-tab.ts  file-operations.ts  flowable-moddle.js  flowable-moddle.ts  flowable-properties-provider.js  flowable-properties-provider.ts  main-original.ts  main.js  main.ts  model-transformations.ts  modeler-setup.ts  tab-manager.ts  types.ts  ui-controls.ts  xml-processor.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/bpmn-tabs/: TABS.md  tabs-usage-bpmn.ts  tabs.css  tabs.html  tabs.ts
src/dmn/: README.md  dmn-factory.ts  flowable-autocomplete.ts  juel-only-expression-languages.ts
src/effects/: effects.ts
src/event-editor/: README.md  event-editor.css  event-editor.ts
src/feel/: flowable-builtins.js
src/integrations/: bpmn-bridge.ts  dmn-bridge.ts  editor-registry.ts  event-bridge.ts
src/properties/: composer.ts  group-utils.ts  guards.ts  (+4 more)
tools/: ts-callgraph.ts
(+60 files in other folders)
