[package]
name = "fleditor-bpmn"
version = "0.0.0"
description = "Flowable BPMN Editor (Tauri host)"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = ""
default-run = "fleditor-bpmn"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog-open", "dialog-save", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

