[package]
name = "fleditor-bpmn"
version = "0.0.0"
description = "Flowable BPMN Editor (Tauri host)"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = ""
default-run = "fleditor-bpmn"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = { version = "2.0.0" }
tauri-plugin-fs = { version = "2.4.2" }
tauri-plugin-dialog = { version = "2.4.0" }

[features]
default = []

